--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,46 @@
-# FastAPI 및 서버 실행
-fastapi
-uvicorn[standard]
-
-# Pydantic (FastAPI에서 자동 설치되지만 명시)
-pydantic
-
-# 환경변수 관리
-python-dotenv
-
-# 비밀번호 해시 (bcrypt 포함)
-passlib[bcrypt]
-
-# JWT 토큰 (로그인 인증)
-python-jose[cryptography]
-
-# SQLAlchemy + 비동기 DB 연결
-sqlalchemy
-databases
-asyncpg  # PostgreSQL 사용할 경우
-
-# 파일 업로드
-python-multipart
-
-# 테스트용
-httpx
-pytest
-pytest-asyncio
+annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==5.0.1
+asyncpg==0.30.0
+bcrypt==4.3.0
+certifi==2025.4.26
+cffi==1.17.1
+click==8.2.0
+cryptography==44.0.3
+databases==0.9.0
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+exceptiongroup==1.3.0
+fastapi==0.115.12
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+packaging==25.0
+passlib==1.7.4
+pluggy==1.5.0
+pyasn1==0.4.8
+pycparser==2.22
+pydantic==2.11.4
+pydantic_core==2.33.2
+pytest==8.3.5
+pytest-asyncio==0.26.0
+python-dotenv==1.1.0
+python-jose==3.4.0
+python-multipart==0.0.20
+PyYAML==6.0.2
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.46.2
+tomli==2.2.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
