--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
+PyMySQL==1.1.1
 pytest==8.3.5
 pytest-asyncio==0.26.0
 python-dotenv==1.1.0
